[gd_scene load_steps=42 format=3 uid="uid://djdcvh5h1c6bq"]

[ext_resource type="Script" uid="uid://dolq1qvill5n0" path="res://Scripts/Enemy Scripts/EnemyExplosionPlaceable.gd" id="1_rsgsc"]
[ext_resource type="PackedScene" uid="uid://st2wda44sgu7" path="res://Models/Enemies/Roller2.blend" id="2_jx6k8"]
[ext_resource type="Texture2D" uid="uid://co6wmanklpgl3" path="res://UI/Particles/ParticleDust.png" id="3_i4xqa"]
[ext_resource type="Texture2D" uid="uid://8coueektucvq" path="res://Assets/Kenney Particles Transparent Background/fire_01.png" id="3_qd03c"]
[ext_resource type="Script" uid="uid://cq485d4lp3x4t" path="res://Scripts/UI/death_spores.gd" id="4_em71o"]
[ext_resource type="Texture2D" uid="uid://b67sgvs236paw" path="res://Assets/Kenney Particles Transparent Background/circle_05.png" id="5_sv5qx"]
[ext_resource type="Script" uid="uid://c075aiwr805vf" path="res://Scripts/UI/enemy_to_boss.gd" id="6_hymqt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rq65h"]
radius = 0.704922

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rsgsc"]
points = PackedVector3Array(-0.387079, -0.952867, -0.893173, 0.0286088, 0.919081, 0.0286088, 0.0286088, 0.919081, -0.0286088, 0.964119, -0.964119, 0.090221, -0.69589, -0.968294, 0.69589, 0.387079, -0.952867, 0.893173, 0.654605, -0.952357, -0.714081, -0.964119, -0.964119, -0.090221, 0.090221, -0.964119, -0.964119, -0.090221, -0.964119, 0.964119, -0.69589, -0.968294, -0.69589, 0.714081, -0.952357, 0.654605, 0.893173, -0.952867, -0.387079, -0.0286088, 0.919081, 0.0286088, -0.893173, -0.952867, 0.387079, -0.893173, -0.952867, -0.387079, -0.387079, -0.952867, 0.893173, 0.387079, -0.952867, -0.893173, 0.893173, -0.952867, 0.387079, -0.0286088, 0.919081, -0.0286088, 0.964119, -0.964119, -0.090221, 0.090221, -0.964119, 0.964119, -0.919554, -0.861947, 0.0574271, -0.0574271, -0.861947, -0.919554, 0.656224, -0.855898, -0.656046, 0.656224, -0.855898, 0.656046, 0.0572615, 0.689839, -0.143694, -0.143684, 0.68979, -0.0574375, 0.143694, 0.689839, 0.0572615, 0.0572615, 0.689839, 0.143694, -0.241132, -0.964526, -0.934314, 0.143694, 0.689839, -0.0572615)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k711p"]
radius = 0.449084
height = 0.898169

[sub_resource type="SphereShape3D" id="SphereShape3D_pu3ww"]
radius = 1.70299

[sub_resource type="SphereShape3D" id="SphereShape3D_3kmyd"]
radius = 3.46895

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xuh6v"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_qd03c")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_3kmyd"]
_data = [Vector2(0.305344, 0.685393), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_ksv8p"]
curve = SubResource("Curve_3kmyd")

[sub_resource type="Gradient" id="Gradient_0ftip"]
offsets = PackedFloat32Array(0, 0.0190476, 0.390476, 0.87619)
colors = PackedColorArray(0.0804598, 0.0804598, 0.0804598, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n1xrl"]
gradient = SubResource("Gradient_0ftip")

[sub_resource type="Curve" id="Curve_ekuxq"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_52x3p"]
curve = SubResource("Curve_ekuxq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pu3ww"]
angle_min = -162.6
angle_max = 320.0
inherit_velocity_ratio = 5.0
spread = 180.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
damping_min = 4.0
damping_max = 5.0
color = Color(0.601631, 0.0603955, 0.635184, 1)
color_ramp = SubResource("GradientTexture1D_n1xrl")
alpha_curve = SubResource("CurveTexture_ksv8p")
hue_variation_min = -0.1
hue_variation_max = 0.1
hue_variation_curve = SubResource("CurveTexture_52x3p")

[sub_resource type="QuadMesh" id="QuadMesh_3kmyd"]

[sub_resource type="Gradient" id="Gradient_2116j"]
offsets = PackedFloat32Array(0, 0.489451, 0.767932, 1)
colors = PackedColorArray(0.624, 0.72, 0, 0.537255, 0.857336, 0.841146, 0.221142, 0.890196, 0.911952, 0.9542, 0.360503, 0.94902, 1, 1, 1, 0.596078)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h6q5h"]
gradient = SubResource("Gradient_2116j")

[sub_resource type="Curve" id="Curve_cpecf"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 13.0573), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mnmti"]
curve = SubResource("Curve_cpecf")

[sub_resource type="Curve" id="Curve_vvdxi"]
_limits = [-10.0, 10.0, 0.0, 1.0]
_data = [Vector2(0, 5.85987), 0.0, 0.0, 0, 0, Vector2(0.707224, -0.143312), -4.41427, -4.41427, 0, 0, Vector2(1, -1.17834), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_3j6b4"]
curve = SubResource("Curve_vvdxi")

[sub_resource type="Curve" id="Curve_awlts"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_opncc"]
curve = SubResource("Curve_awlts")

[sub_resource type="Curve" id="Curve_kreo4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.500753), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_er0cr"]
curve = SubResource("Curve_kreo4")

[sub_resource type="Curve" id="Curve_rpsj5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yh06s"]
curve = SubResource("Curve_rpsj5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tk045"]
lifetime_randomness = 0.5
emission_shape_scale = Vector3(2, 6, 2)
emission_shape = 1
emission_sphere_radius = 0.25
angle_min = 1.07288e-05
angle_max = 45.0
direction = Vector3(0, 0, 0)
spread = 180.0
flatness = 1.0
initial_velocity_min = -2.0
initial_velocity_max = 2.0
angular_velocity_min = 30.0
angular_velocity_max = 60.0
orbit_velocity_min = 0.1
orbit_velocity_max = 0.3
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
velocity_limit_curve = SubResource("CurveTexture_yh06s")
gravity = Vector3(0, -0.2, 0)
radial_accel_min = 0.0999978
radial_accel_max = 0.199998
radial_accel_curve = SubResource("CurveTexture_3j6b4")
tangential_accel_min = 0.399998
tangential_accel_max = 0.999998
damping_min = 0.2
damping_max = 1.0
damping_curve = SubResource("CurveTexture_mnmti")
scale_min = 0.3
scale_max = 1.2
scale_curve = SubResource("CurveTexture_opncc")
color = Color(0.623529, 0.721569, 0, 1)
color_ramp = SubResource("GradientTexture1D_h6q5h")
turbulence_enabled = true
turbulence_noise_strength = 12.88
turbulence_noise_speed = Vector3(1, 1, 1)
turbulence_noise_speed_random = 1.04
turbulence_initial_displacement_min = 1.49012e-06
turbulence_initial_displacement_max = 1.49012e-06
turbulence_influence_over_life = SubResource("CurveTexture_er0cr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x7nyk"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_i4xqa")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_lnx1g"]
material = SubResource("StandardMaterial3D_x7nyk")
size = Vector2(1.5, 1.5)

[sub_resource type="Curve" id="Curve_fr4n8"]
_limits = [-2.13483, 10.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, -2.13483), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ar3t4"]
curve = SubResource("Curve_fr4n8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6mfum"]
emission_shape_scale = Vector3(0.2, 1, 0.2)
emission_shape = 1
emission_sphere_radius = 1.0
spread = 0.0
orbit_velocity_min = 9.49949e-08
orbit_velocity_max = 9.49949e-08
radial_velocity_min = -1.00002
radial_velocity_max = -1.00002
gravity = Vector3(1, 0, 0)
linear_accel_min = 0.999998
linear_accel_max = 1.5
radial_accel_min = -2.23517e-06
radial_accel_max = -2.23517e-06
tangential_accel_min = -0.250002
tangential_accel_max = 0.249998
tangential_accel_curve = SubResource("CurveTexture_ar3t4")
color = Color(1, 0, 0.833333, 1)
turbulence_noise_strength = 5.95
turbulence_noise_speed = Vector3(10, 0, 0)
turbulence_noise_speed_random = 0.66
turbulence_influence_max = 0.109

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_auvgr"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("5_sv5qx")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_nsjrd"]
material = SubResource("StandardMaterial3D_auvgr")
size = Vector2(0.5, 0.5)

[node name="ExplosionEnemy" type="CharacterBody3D" groups=["Enemy", "enemy"]]
script = ExtResource("1_rsgsc")

[node name="HearingArea" type="Area3D" parent="." groups=["Enemy"]]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HearingArea" groups=["Enemy"]]
shape = SubResource("SphereShape3D_rq65h")
debug_color = Color(0.138961, 0.599429, 0.670183, 1)

[node name="VisionArea" type="Area3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0.2, 0.581, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(-2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, 0, 0.5, 0.462569, -0.0517724, 0)
shape = SubResource("ConvexPolygonShape3D_rsgsc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_k711p")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Mesh" parent="." instance=ExtResource("2_jx6k8")]

[node name="Skeleton3D" parent="Mesh/Armature" index="0"]
bones/0/rotation = Quaternion(-7.06651e-09, 3.38417e-08, 0.300996, 0.953626)
bones/1/position = Vector3(2.00366e-09, -0.269841, -0.142753)
bones/1/rotation = Quaternion(-0.707107, -5.26836e-09, 0.707107, -5.26836e-09)
bones/3/position = Vector3(1.23645e-08, -0.27435, 0.147254)
bones/3/rotation = Quaternion(-0.707107, -5.26836e-09, 0.707107, -5.26836e-09)
bones/5/position = Vector3(1.54714e-09, -0.025236, 0.21961)
bones/5/rotation = Quaternion(0.302937, -0.638928, -0.302937, 0.638928)
bones/7/position = Vector3(1.97648e-09, -0.025236, -0.215732)
bones/7/rotation = Quaternion(-0.0716816, 0.897109, -0.406196, 0.158313)
bones/10/position = Vector3(-0.000245689, 0.000394933, -2.24236e-07)
bones/10/rotation = Quaternion(8.06622e-09, -1.89425e-09, -0.0909777, 0.995853)

[node name="BeinR" parent="Mesh/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.818803, -0.574075, -9.54457e-08, 0.574074, 0.818803, -5.55052e-08, 5.04107e-08, -9.34513e-09, 1, -0.0236344, 0.0306309, -0.00346281)

[node name="BeinL" parent="Mesh/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.818803, -0.574075, -9.54457e-08, 0.574074, 0.818803, -5.55052e-08, 5.04107e-08, -9.34513e-09, 1, -0.021046, 0.0269391, 1.04308e-07)

[node name="ArmL" parent="Mesh/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.818803, -0.44446, -0.363341, 0.574075, 0.633934, 0.518234, -2.36542e-07, -0.632917, 0.77422, 0.0573383, -0.0848604, -0.000962868)

[node name="ArmR" parent="Mesh/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.818803, -0.431416, 0.378736, 0.574074, 0.615331, -0.540191, -7.7486e-07, 0.659733, 0.7515, 0.060292, -0.0890731, -0.000921667)

[node name="Hutshell" parent="Mesh/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.881335, -0.472492, 0.000287027, 0.472492, 0.881335, -2.53634e-05, -0.000240983, 0.000157972, 1, -0.000420555, 0.000211563, -3.61166e-07)

[node name="Körper" parent="Mesh/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.905571, -0.423777, -0.0188538, 0.423862, 0.905726, 0.000616985, 0.0168149, -0.00855013, 0.999822, 0.00501396, -0.0107162, 0.000101157)

[node name="Hut" parent="Mesh/Armature/Skeleton3D" index="6"]
transform = Transform3D(0.905571, -0.423777, -0.0188538, 0.423862, 0.905726, 0.000616985, 0.0168149, -0.00855013, 0.999822, -1.11759e-08, 1.21072e-08, -4.9331e-09)

[node name="Sphere_002" parent="Mesh/Armature/Skeleton3D" index="7"]
transform = Transform3D(0.905571, -0.423777, -0.0188538, 0.423862, 0.905726, 0.000616985, 0.0168149, -0.00855013, 0.999822, -0.129447, -0.000277434, -0.00244082)

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("SphereShape3D_pu3ww")

[node name="DamageArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
shape = SubResource("SphereShape3D_3kmyd")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_xuh6v")
emitting = false
amount = 1000
one_shot = true
explosiveness = 1.0
randomness = 0.05
process_material = SubResource("ParticleProcessMaterial_pu3ww")
draw_pass_1 = SubResource("QuadMesh_3kmyd")

[node name="DeathSpores" type="GPUParticles3D" parent="."]
emitting = false
amount = 1000
lifetime = 5.0
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
local_coords = true
draw_order = 3
transform_align = 1
process_material = SubResource("ParticleProcessMaterial_tk045")
draw_pass_1 = SubResource("QuadMesh_lnx1g")
script = ExtResource("4_em71o")

[node name="EnemyToBoss" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
emitting = false
amount = 40
lifetime = 8.0
one_shot = true
explosiveness = 1.0
visibility_aabb = AABB(0, 0, 0, 0.01, 0.01, 0.01)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_6mfum")
draw_pass_1 = SubResource("QuadMesh_nsjrd")
script = ExtResource("6_hymqt")

[connection signal="area_entered" from="HearingArea" to="." method="_on_hearing_area_entered"]
[connection signal="area_exited" from="HearingArea" to="." method="_on_hearing_area_exited"]
[connection signal="area_entered" from="VisionArea" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="VisionArea" to="." method="_on_vision_area_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_entered"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_entered"]
[connection signal="area_exited" from="DamageArea" to="." method="_on_damage_area_exited"]

[editable path="Mesh"]
